# crystalsnow

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  wallpaper.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
