[package]
name = "crystalsnow"
version = "0.1.0"
description = "Crystal Snow Animated Wallpaper"
authors = ["you"]
edition = "2021"

[lib]
name = "crystalsnow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]}